--- a/alan-pto-request/src/App.css
+++ b/alan-pto-request/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +13,11 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Login {
+  background-color: beige;
+  font-family: Arial, Helvetica, sans-serif;
+  size: 50%;
+  color: black;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
